# Irodori-TTS-burn

./: .gitignore  Cargo.toml  README.md  justfile
.github/: copilot-instructions.md
benches/: codec.rs  inference.rs
docs/: benchmarks.md  feature-coverage.md  setup.md  skills-required.md
docs/analysis/: backend-generics-abstraction.md  burn_attention_investigation.md  f32-overhead-analysis.md  layer-comparison.md  nan-softmax-fix.md  precision-investigation.md
docs/benchmarks/: README.md  m4-pro.md  rtx-5070ti-laptop.md  rtx-a6000.md  training-performance.md
docs/planning/: architecture.md  cubecl-optimization-research.md  wgpu-optimization.md
docs/review/: 2026-04-13-quality-review.md  2026-07-17-backend-macro-review.md  other_advice_1.md  other_advice_2.md
docs/setup/: rtx-5070ti-laptop.md
docs/user-inputs/: 2025-04-21_pipeline-wgpu-test.md  2026-04-11_initial-request.md  2026-04-12_codec-parity-and-next-tasks.md  2026-04-12_skill-confirmation-and-continue.md  2026-04-13_please-continue.md  2026-04-14_burn-upgrade-flash-attention.md  2026-04-14_continue-tests-sync-review.md  2026-04-14_lora-training-review-and-perf.md  2026-04-14_precision-and-features.md  2026-04-21_lora-testing-integration.md  2026-07-14_continue-e2e-pipeline.md  2026-07-14_continue-next-tasks.md  2026-07-14_next-tasks-direction.md  2026-07-15_quality-comparison-and-layerwise.md  2026-07-16_resume-review-features.md  2026-07-17_continue-skills-docs-rubberduck.md  2026-07-17_continue-work.md  2026-07-17_features-docs-benchmarks.md  2026-07-17_throughput-features-tests.md  2026-07-18_continue-reproducibility-review.md  2026-07-18_gpu-backends-enum-ndarray-cleanup.md  2026-07-20_continue-fused-weights.md  2026-07-20_continue-skills-docs-rubberduck.md  2026-07-20_f32-perf-investigation.md  2026-07-20_gpu-verification-stats.md  2026-07-20_typestate-inference-optimization.md  2026-07-20_wgsl-kernels.md  2026-07-21_continue-skills-docs-subagents.md  2026-07-21_session-handoff.md  2026-07-22_mac-metal-benchmarks.md  2026-07-23_heun-sampler.md  2026-07-28_continue-muon-metrics.md  2026-07-28_continue.md
docs/wgsl/: README.md  extensions-status.md  kernel-patterns.md
examples/: train_config.toml
scripts/: bench_codec_py.py  bench_python.py  bench_scaffold_ops.py  bench_train_py.py  codec_e2e_ref.py  compare_latents.py  convert_dacvae_weights.py  convert_for_burn.py  download_model.py  e2e_compare.py  encode_dataset.py  export_initial_noise.py  full_model_e2e.py  gen_bench_data.py  gen_synthetic_train_data.py  intel_gpu_test.py  profile_micro_ops.py  profile_micro_rust.rs  profile_per_step_python.py  profile_steps.py  run_quality_comparison.py  validate_numerics.py
src/: backend_config.rs  codec.rs  config.rs  error.rs  inference.rs  kernels.rs  lib.rs  lora.rs  main.rs  model.rs  profiling.rs  rf.rs  text_normalization.rs  train.rs  weights.rs
src/codec/: bottleneck.rs  decoder.rs  encoder.rs  layers.rs  model.rs  weights.rs
src/config/: model.rs  sampling.rs  training.rs
src/kernels/: f16_diagnostic.rs  f16_diagnostic.wgsl  fused_adaln.rs  fused_adaln.wgsl  fused_sdpa.rs  fused_sdpa.wgsl  fused_sdpa_native.rs  fused_sdpa_native.wgsl  fused_sdpa_native_f16.rs  fused_sdpa_native_f16.wgsl  fused_sdpa_tiled.rs  fused_sdpa_tiled.wgsl  rms_norm.rs  rms_norm.wgsl  subgroup_diagnostic.rs  subgroup_diagnostic.wgsl
src/model/: attention.rs  condition.rs  diffusion.rs  dit.rs  feed_forward.rs  norm.rs  optimized.rs  rope.rs  speaker_encoder.rs  text_encoder.rs
src/model/dit/: aux_conditioner.rs  model.rs
src/rf/: euler_sampler.rs  kv_scaling.rs  math.rs  params.rs
src/train/: checkpoint.rs  dataset.rs  lora_layer.rs  lora_model.rs  lora_weights.rs  loss.rs  lr_schedule.rs  metrics.rs  trainer.rs
src/train/dataset/: batch.rs  manifest.rs
src/train/trainer/: condition_dropout.rs  detached_encoding.rs  gradient_clipping.rs  resume.rs  validation.rs
src/weights/: loaders.rs  lora_record.rs  record_builders.rs  tensor_entry.rs  tensor_store.rs  test_helpers.rs
