[package]
name = "Irodori-TTS-burn"
version = "0.1.0"
edition = "2024"

[lib]
name = "irodori_tts_burn"

# --------------------------------------------------------------------------
# Feature flags for multi-backend benchmark binaries
#
# These are compile-time-only type-alias selectors.
# All three burn backends are compiled in regardless; these flags only
# control which type alias is active in bench_realmodel.rs.
# Mutually exclusive — select exactly one when building bench_realmodel.
# --------------------------------------------------------------------------
[features]
backend_cpu       = []  # NdArray<f32>  (default fallback)
backend_wgpu      = []  # WGPU (f32)
backend_wgpu_f16  = []  # WGPU (f16)  — requires shader-f16 GPU support
backend_wgpu_bf16 = []  # WGPU (bf16) — requires Vulkan+SPIR-V or Metal with bf16 support
backend_cuda      = []  # Cuda<f32>
backend_cuda_bf16 = []  # Cuda<bf16>  — faster on Tensor Core GPUs
backend_tch       = []  # LibTorch f32 (cuBLAS/FA3 via PyTorch)
backend_tch_bf16  = []  # LibTorch bf16 (cuBLAS Tensor Core + FA3)
# Enable NVTX range annotations for nsys profiling.
# Use with: just bench-cuda-profile / nsys profile -- cargo run --features nvtx,...
profile = ["dep:nvtx"]

[dependencies]
anyhow = "1.0.102"
burn = { version = "0.21.0-pre.3", features = ["autodiff", "cuda", "ndarray", "wgpu", "tch", "autotune"] }
clap = { version = "4.6.0", features = ["derive"] }
half = "2.7.1"
hf-hub = "0.5.0"
hound = "3.5.1"
nvtx = { version = "1.3.0", optional = true }
once_cell = "1.21.4"
regex = "1.12.3"
safetensors = "0.7.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokenizers = "0.22.2"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }
unicode-normalization = "0.1.25"

[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports"] }

[[bench]]
name = "inference"
harness = false
