[package]
name = "Irodori-TTS-burn"
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Sanzentyo"]
description = "Rust/burn reimplementation of Irodori-TTS Japanese text-to-speech"
repository = "https://github.com/Sanzentyo/Irodori-TTS-burn"

[lib]
name = "irodori_tts_burn"

# --------------------------------------------------------------------------
# Feature flags
# --------------------------------------------------------------------------
[features]
default = ["inference", "codec", "text-normalization"]

# Library features — gate major subsystems
inference          = []  # InferenceBuilder / InferenceEngine type-state API
codec              = []  # DACVAE encoder/decoder
text-normalization = []  # Japanese text normaliser (regex, unicode-normalization)
lora               = []  # LoRA adapter loading/merging (additive to inference)
train              = []  # LoRA fine-tuning infrastructure (dataset, trainer, loss)

# Backend selectors for benchmark/inference binaries (mutually exclusive)
backend_cpu       = []  # NdArray<f32>  (no-op — CPU is the default fallback when no backend is selected)
backend_wgpu      = []  # WGPU (f32)
backend_wgpu_f16  = []  # WGPU (f16)  — requires shader-f16 GPU support
backend_wgpu_bf16 = []  # WGPU (bf16) — requires Vulkan+SPIR-V or Metal with bf16 support
backend_cuda      = []  # Cuda<f32>
backend_cuda_bf16 = []  # Cuda<bf16>  — faster on Tensor Core GPUs
backend_tch       = []  # LibTorch f32 (cuBLAS/FA3 via PyTorch)
backend_tch_bf16  = []  # LibTorch bf16 (cuBLAS Tensor Core + FA3)

# Enable NVTX range annotations for nsys profiling.
profile = ["dep:nvtx"]

[dependencies]
anyhow = "1.0.102"
burn = { version = "0.21.0-pre.3", features = ["autodiff", "cuda", "ndarray", "wgpu", "tch", "autotune"] }
clap = { version = "4.6.0", features = ["derive"] }
half = "2.7.1"
hf-hub = "0.5.0"
hound = "3.5.1"
libm = "0.2.16"
nvtx = { version = "1.3.0", optional = true }
once_cell = "1.21.4"
rand = "0.8"
regex = "1.12.3"
safetensors = "0.7.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokenizers = "0.22.2"
toml = "1.1.2"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }
unicode-normalization = "0.1.25"

[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports"] }
tempfile = "3.27.0"

[[bench]]
name = "inference"
harness = false
required-features = ["inference"]

[[bench]]
name = "codec"
harness = false
required-features = ["codec"]

# --------------------------------------------------------------------------
# Binary targets with required features
# --------------------------------------------------------------------------
[[bin]]
name = "train_lora"
path = "src/bin/train_lora.rs"
required-features = ["train"]

[[bin]]
name = "pipeline"
path = "src/bin/pipeline.rs"
required-features = ["inference", "codec", "text-normalization"]

[[bin]]
name = "infer"
path = "src/bin/infer.rs"
required-features = ["inference"]

[[bin]]
name = "bench_codec"
path = "src/bin/bench_codec.rs"
required-features = ["codec"]

[[bin]]
name = "codec_e2e"
path = "src/bin/codec_e2e.rs"
required-features = ["codec"]
