[package]
name = "Irodori-TTS-burn"
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Sanzentyo"]
description = "Rust/burn reimplementation of Irodori-TTS Japanese text-to-speech"
repository = "https://github.com/Sanzentyo/Irodori-TTS-burn"
autobins = false

[lib]
name = "irodori_tts_burn"

# --------------------------------------------------------------------------
# Feature flags
# --------------------------------------------------------------------------
[features]
default = ["inference", "codec", "text-normalization"]

# Library subsystems — gate modules and their specific dependencies
inference          = []                                                       # InferenceBuilder / InferenceEngine type-state API
codec              = []                                                       # DACVAE encoder/decoder
text-normalization = ["dep:regex", "dep:unicode-normalization", "dep:once_cell"]  # Japanese text normaliser
lora               = []                                                       # LoRA adapter loading/merging (additive to inference)
train              = ["dep:rand", "dep:toml", "dep:tokenizers", "dep:libm"]   # LoRA fine-tuning (dataset, trainer, loss)

# Binary tooling — pulls in deps only needed by CLI executables, not library consumers
cli = ["dep:clap", "dep:anyhow", "dep:hf-hub", "dep:hound", "dep:tokenizers", "dep:tracing-subscriber", "dep:tch"]

# Enable NVTX range annotations for nsys profiling.
profile = ["dep:nvtx"]
tch = ["dep:tch"]

# --------------------------------------------------------------------------
# Dependencies
# --------------------------------------------------------------------------
[dependencies]
# Always needed (core model, weights, backend, serialization)
burn = { version = "0.21.0-pre.3", features = ["autodiff", "cuda", "ndarray", "wgpu", "tch", "autotune", "template"] }
half = "2.7.1"
safetensors = "0.7.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tracing = "0.1.44"

# Conditional — activated by library subsystem features
libm = { version = "0.2.16", optional = true }
once_cell = { version = "1.21.4", optional = true }
rand = { version = "0.8", optional = true }
regex = { version = "1.12.3", optional = true }
tokenizers = { version = "0.22.2", optional = true }
toml = { version = "1.1.2", optional = true }
unicode-normalization = { version = "0.1.25", optional = true }

# Conditional — activated by `cli` feature (binary-only deps)
anyhow = { version = "1.0.102", optional = true }
clap = { version = "4.6.0", features = ["derive"], optional = true }
hf-hub = { version = "0.5.0", optional = true }
hound = { version = "3.5.1", optional = true }
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"], optional = true }

# Conditional — profiling
nvtx = { version = "1.3.0", optional = true }
tch = { version = "0.22.0", optional = true }
cubecl = "0.10.0-pre.3"
bytemuck = "1.25.0"

[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports"] }
tempfile = "3.27.0"
toml = "1.1.2"

# --------------------------------------------------------------------------
# Benchmarks
# --------------------------------------------------------------------------
[[bench]]
name = "inference"
harness = false
required-features = ["inference"]

[[bench]]
name = "codec"
harness = false
required-features = ["codec"]

# --------------------------------------------------------------------------
# Binary targets (autobins = false — every binary is explicit)
# --------------------------------------------------------------------------
[[bin]]
name = "train_lora"
path = "src/bin/train_lora.rs"
required-features = ["train", "cli"]

[[bin]]
name = "pipeline"
path = "src/bin/pipeline.rs"
required-features = ["inference", "codec", "text-normalization", "cli"]

[[bin]]
name = "infer"
path = "src/bin/infer.rs"
required-features = ["inference", "cli"]

[[bin]]
name = "bench_codec"
path = "src/bin/bench_codec.rs"
required-features = ["codec", "cli"]

[[bin]]
name = "codec_e2e"
path = "src/bin/codec_e2e.rs"
required-features = ["codec", "cli"]

[[bin]]
name = "bench_realmodel"
path = "src/bin/bench_realmodel.rs"
required-features = ["inference", "cli"]

[[bin]]
name = "validate"
path = "src/bin/validate.rs"
required-features = ["cli"]

[[bin]]
name = "e2e_compare"
path = "src/bin/e2e_compare.rs"
required-features = ["inference", "cli"]

[[bin]]
name = "full_model_e2e"
path = "src/bin/full_model_e2e.rs"
required-features = ["inference", "cli"]

[[bin]]
name = "bench_rmsnorm"
path = "src/bin/bench_rmsnorm.rs"

[[bin]]
name = "bench_fused_adaln"
path = "src/bin/bench_fused_adaln.rs"

[[bin]]
name = "profile_wgpu_ops"
path = "src/bin/profile_wgpu_ops.rs"
